docs/version-1.25/modules/en/pages/howtos/security-hardening/security-hardening.adoc
= Security hardening
:sidebar_label: Security hardening
:sidebar_position: 50
:description: Harden the Kubewarden installation
:keywords: kubewarden, kubernetes, security
:doc-persona: kubewarden-operator, kubewarden-integrator
:doc-type: howto
:doc-topic: operator-manual, security

Kubewarden strives to be secure with little configuration.
In this section and its subpages, you can find hardening tips (with their
trade-offs) to secure Kubewarden itself.

Please refer to our xref:/reference/threat-model.adoc[threat model] for more information.

== `kubewarden-defaults` Helm chart

Operators can obtain a secure deployment by installing all the
Kubewarden Helm charts. It's recommended to install the
`kubewarden-defaults` Helm chart and enable its recommended policies with:

[source,console]
----
helm install --wait -n kubewarden kubewarden-defaults kubewarden/kubewarden-defaults \
  --set recommendedPolicies.enabled=True \
  --set recommendedPolicies.defaultPolicyMode=protect
----

This provides a default PolicyServer and default policies, in protect mode, to
ensure the Kubewarden stack is safe from other workloads.

== Verifying Kubewarden artifacts

Refer to the xref:/tutorials/verifying-kubewarden.adoc[Verifying Kubewarden] tutorial.

== RBAC

Kubewarden describes RBAC configurations in different
_Explanations_ sections. Users can fine-tune the needed permissions for the
xref:/explanations/audit-scanner/audit-scanner.adoc#_permissions_and_serviceaccounts[Audit Scanner]
feature, as well as xref:/explanations/context-aware-policies.adoc[per Policy Server]
Service Account for the context-aware feature.

To view all Roles:

[source,console]
----
kubectl get clusterroles,roles -A | grep kubewarden
----

== Per-policy permissions

For context-aware policies, operators specify fine-grained permissions per
policy under its `spec.contextAwareResources`, and those work in conjunction
with the Service Account configured for the Policy Server where the policy
runs.

== Workload coverage

By default, Kubewarden excludes specific Namespaces from Kubewarden coverage. This is
done to simplify first-time use and interoperability with other workloads.

Security-conscious operators can tune these Namespaces list via the
`.global.skipNamespaces` value for both the `kubewarden-controller` and
`kubewarden-defaults` Helm charts.

== Pod Security Admission

Starting from 1.23, Kubewarden's stack is able to run in a Namespace where the
https://kubernetes.io/docs/concepts/security/pod-security-standards/#restricted[`restricted``
Pod Security Standards] are enforced, with current Pod hardening best
practices.

To do that, ensure the `pod-security.kubernetes.io/enforce: restricted` label
is added to the Namespace where Kubewarden is deployed.

```console
kubectl label namespace kubewarden pod-security.kubernetes.io/enforce=restricted --overwrite
```

See the
https://kubernetes.io/docs/concepts/security/pod-security-admission/[official
documentation] of Kubernetes' Pod Security Admission for more details.

=== SecurityContexts

The `kubewarden-controller` Helm chart configures the SecurityContexts and
exposes them in its `values.yaml`.

The `kubewarden-defaults` Helm chart allows for configuring the default Policy
Server `.spec.securityContexts` under `.Values.policyServer.securityContexts`.

For Policy Servers managed by operators, you can configure them via their
https://docs.kubewarden.io/reference/CRDs#policyserversecurity[`spec.securityContexts`].